minor fixes to logo alignment (#6)

--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,15 @@ html {
 }
 .img-width
 {
-    width:200px; height: fit-content;
+    width:200px;
 }
+
 @media only screen and (max-width:767px) {
 	.font-65 {
-		font-size: 38px !important;
+		font-size: 30px !important;
 	}
 	.font-26 {
-		font-size: 20px !important;
+		font-size: 16px !important;
 	}
 	.font-30 {
 		font-size: 24px !important;
@@ -106,7 +107,6 @@ html {
     .img-width
     {
         width: 150px ;
-        height: fit-content;
     }
     .font-regular {
         font-family: "Urbanist_semiBold" !important;
